Correct more urls

--- a/Templates/JAR3Doutput/sitewide_menu.html
+++ b/Templates/JAR3Doutput/sitewide_menu.html
@@ -1,4 +1,4 @@
-    <div class="navbar navbar-fixed-top">
+    ndiv class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -7,48 +7,48 @@
             <span class="icon-bar"></span>
           </a>
 
-                                        <a class="brand" href="http://rna.bgsu.edu/main/" title="BGSU RNA Bioinformatics Lab" rel="homepage">BGSU RNA Bioinformatics Lab</a>
+                                        <a class="brand" href="{{BASE}}/main/" title="BGSU RNA Bioinformatics Lab" rel="homepage">BGSU RNA Bioinformatics Lab</a>
 
 
 
 
           <div class="nav-collapse">
-			   <ul id="menu-site-wide-menu" class="nav"><li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-100"><a href="http://rna.bgsu.edu/main/software/"  class="dropdown-toggle" data-toggle="dropdown">Software <b class="caret"></b></a>
+			   <ul id="menu-site-wide-menu" class="nav"><li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-100"><a href="{{BASE}}/main/software/"  class="dropdown-toggle" data-toggle="dropdown">Software <b class="caret"></b></a>
 <ul class="dropdown-menu">
-	<li id="menu-item-118" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-118"><a href="http://rna.bgsu.edu/main/software/fr3d/" >FR3D</a></li>
-	<li id="menu-item-530" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="http://rna.bgsu.edu/main/webapps/webr3dalign/" >R3DAlign</a></li>
+	<li id="menu-item-118" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-118"><a href="{{BASE}}/main/software/fr3d/" >FR3D</a></li>
+	<li id="menu-item-530" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="{{BASE}}/main/webapps/webr3dalign/" >R3DAlign</a></li>
 </ul>
 </li>
-<li id="menu-item-98" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-98"><a href="http://rna.bgsu.edu/main/webapps/"  class="dropdown-toggle" data-toggle="dropdown">Web Applications <b class="caret"></b></a>
+<li id="menu-item-98" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-98"><a href="{{BASE}}/main/webapps/"  class="dropdown-toggle" data-toggle="dropdown">Web Applications <b class="caret"></b></a>
 <ul class="dropdown-menu">
-	<li id="menu-item-103" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-103"><a href="http://rna.bgsu.edu/main/webapps/webfr3d/" >WebFR3D</a></li>
-	<li id="menu-item-377" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-377"><a href="http://rna.bgsu.edu/webfr3d/geometric.php" >&nbsp;&nbsp;&nbsp;&nbsp;Geometric WebFR3D server</a></li>
-	<li id="menu-item-378" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-378"><a href="http://rna.bgsu.edu/webfr3d/symbolic.php" >&nbsp;&nbsp;&nbsp;&nbsp;Symbolic WebFR3D server</a></li>
-	<li id="menu-item-101" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-101"><a href="http://rna.bgsu.edu/main/webapps/jar3d/" >JAR3D</a></li>
+	<li id="menu-item-103" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-103"><a href="{{BASE}}/main/webapps/webfr3d/" >WebFR3D</a></li>
+	<li id="menu-item-377" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-377"><a href="{{BASE}}/webfr3d/geometric.php" >&nbsp;&nbsp;&nbsp;&nbsp;Geometric WebFR3D server</a></li>
+	<li id="menu-item-378" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-378"><a href="{{BASE}}/webfr3d/symbolic.php" >&nbsp;&nbsp;&nbsp;&nbsp;Symbolic WebFR3D server</a></li>
+	<li id="menu-item-101" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-101"><a href="{{BASE}}/main/webapps/jar3d/" >JAR3D</a></li>
 	<li id="menu-item-537" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-537"><a href="/jar3d">&nbsp;&nbsp;&nbsp;&nbsp;JAR3D server</a></li>
-	<li id="menu-item-102" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-102"><a href="http://rna.bgsu.edu/main/webapps/webr3dalign/" >WebR3DAlign</a></li>
-	<li id="menu-item-538" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-538"><a href="http://rna.bgsu.edu/r3dalign" >&nbsp;&nbsp;&nbsp;&nbsp;WebR3DAlign server</a></li>
+	<li id="menu-item-102" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-102"><a href="{{BASE}}/main/webapps/webr3dalign/" >WebR3DAlign</a></li>
+	<li id="menu-item-538" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-538"><a href="{{BASE}}/r3dalign" >&nbsp;&nbsp;&nbsp;&nbsp;WebR3DAlign server</a></li>
 </ul>
 </li>
-<li id="menu-item-99" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-99"><a href="http://rna.bgsu.edu/main/databases/"  class="dropdown-toggle" data-toggle="dropdown">Databases <b class="caret"></b></a>
+<li id="menu-item-99" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-99"><a href="{{BASE}}/main/databases/"  class="dropdown-toggle" data-toggle="dropdown">Databases <b class="caret"></b></a>
 <ul class="dropdown-menu">
-	<li id="menu-item-484" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-484"><a href="http://rna.bgsu.edu/rna3dhub" >RNA 3D Hub</a></li>
-	<li id="menu-item-485" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-485"><a href="http://rna.bgsu.edu/rna3dhub/motifs" >&nbsp;&nbsp;&nbsp;&nbsp;RNA 3D Motif Atlas</a></li>
-	<li id="menu-item-566" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-566"><a href="http://rna.bgsu.edu/rna3dhub/nrlist" >&nbsp;&nbsp;&nbsp;&nbsp;Non-redundant lists</a></li>
-	<li id="menu-item-567" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-567"><a href="http://rna.bgsu.edu/rna3dhub/loops" >&nbsp;&nbsp;&nbsp;&nbsp;Loop Atlas</a></li>
-	<li id="menu-item-568" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-568"><a href="http://rna.bgsu.edu/FR3D/basepairs/" >RNA Basepair Catalog</a></li>
-	<li id="menu-item-569" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-569"><a href="http://rna.bgsu.edu/FR3D/BasePhosphates/" >RNA Base Phosphate Catalog</a></li>
-	<li id="menu-item-120" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-120"><a href="http://rna.bgsu.edu/main/databases/triples/" >RNA Base Triple Database</a></li>
+	<li id="menu-item-484" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-484"><a href="{{BASE}}/rna3dhub" >RNA 3D Hub</a></li>
+	<li id="menu-item-485" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-485"><a href="{{BASE}}/rna3dhub/motifs" >&nbsp;&nbsp;&nbsp;&nbsp;RNA 3D Motif Atlas</a></li>
+	<li id="menu-item-566" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-566"><a href="{{BASE}}/rna3dhub/nrlist" >&nbsp;&nbsp;&nbsp;&nbsp;Non-redundant lists</a></li>
+	<li id="menu-item-567" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-567"><a href="{{BASE}}/rna3dhub/loops" >&nbsp;&nbsp;&nbsp;&nbsp;Loop Atlas</a></li>
+	<li id="menu-item-568" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-568"><a href="{{BASE}}/FR3D/basepairs/" >RNA Basepair Catalog</a></li>
+	<li id="menu-item-569" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-569"><a href="{{BASE}}/FR3D/BasePhosphates/" >RNA Base Phosphate Catalog</a></li>
+	<li id="menu-item-120" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-120"><a href="{{BASE}}/main/databases/triples/" >RNA Base Triple Database</a></li>
 </ul>
 </li>
-<li id="menu-item-121" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-121"><a href="http://rna.bgsu.edu/main/about-us/"  class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
+<li id="menu-item-121" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-121"><a href="{{BASE}}/main/about-us/"  class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
 <ul class="dropdown-menu">
-	<li id="menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="http://rna.bgsu.edu/main/about-us/people/" >People</a></li>
-	<li id="menu-item-95" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-95"><a href="http://rna.bgsu.edu/main/about-us/publications/" >Publications</a></li>
+	<li id="menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="{{BASE}}/main/about-us/people/" >People</a></li>
+	<li id="menu-item-95" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-95"><a href="{{BASE}}/main/about-us/publications/" >Publications</a></li>
 </ul>
 </li>
-<li id="menu-item-241" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-241"><a href="http://rna.bgsu.edu/main/news-2/" >News</a></li>
-<li id="menu-item-97" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-97"><a href="http://rna.bgsu.edu/main/contact-us/" >Contact us</a></li>
+<li id="menu-item-241" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-241"><a href="{{BASE}}/main/news-2/" >News</a></li>
+<li id="menu-item-97" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-97"><a href="{{BASE}}/main/contact-us/" >Contact us</a></li>
 </ul>            </div>
 
 
