Fix issue with header links

--- a/Templates/JAR3Doutput/sitewide_menu.html
+++ b/Templates/JAR3Doutput/sitewide_menu.html
@@ -13,13 +13,13 @@
 
 
           <div class="nav-collapse">
-			   <ul id="menu-site-wide-menu" class="nav"><li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-100"><a href="{{BASE}}/main/software/"  class="dropdown-toggle" data-toggle="dropdown">Software <b class="caret"></b></a>
+			   <ul id="menu-site-wide-menu" class="nav"><li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-100"><a href=""  class="dropdown-toggle" data-toggle="dropdown">Software <b class="caret"></b></a>
 <ul class="dropdown-menu">
 	<li id="menu-item-118" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-118"><a href="{{BASE}}/main/software/fr3d/" >FR3D</a></li>
 	<li id="menu-item-530" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="{{BASE}}/main/webapps/webr3dalign/" >R3DAlign</a></li>
 </ul>
 </li>
-<li id="menu-item-98" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-98"><a href="{{BASE}}/main/webapps/"  class="dropdown-toggle" data-toggle="dropdown">Web Applications <b class="caret"></b></a>
+<li id="menu-item-98" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-98"><a href=""  class="dropdown-toggle" data-toggle="dropdown">Web Applications <b class="caret"></b></a>
 <ul class="dropdown-menu">
 	<li id="menu-item-103" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-103"><a href="{{BASE}}/main/webapps/webfr3d/" >WebFR3D</a></li>
 	<li id="menu-item-377" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-377"><a href="{{BASE}}/webfr3d/geometric.php" >&nbsp;&nbsp;&nbsp;&nbsp;Geometric WebFR3D server</a></li>
@@ -30,7 +30,7 @@
 	<li id="menu-item-538" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-538"><a href="{{BASE}}/r3dalign" >&nbsp;&nbsp;&nbsp;&nbsp;WebR3DAlign server</a></li>
 </ul>
 </li>
-<li id="menu-item-99" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-99"><a href="{{BASE}}/main/databases/"  class="dropdown-toggle" data-toggle="dropdown">Databases <b class="caret"></b></a>
+<li id="menu-item-99" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-99"><a href=""  class="dropdown-toggle" data-toggle="dropdown">Databases <b class="caret"></b></a>
 <ul class="dropdown-menu">
 	<li id="menu-item-484" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-484"><a href="{{BASE}}/rna3dhub" >RNA 3D Hub</a></li>
 	<li id="menu-item-485" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-485"><a href="{{BASE}}/rna3dhub/motifs" >&nbsp;&nbsp;&nbsp;&nbsp;RNA 3D Motif Atlas</a></li>
