Update hover-over tooltips

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -113,7 +113,7 @@
   </div>
 
   <div class="help-text" hidden data-header-name="mean-score">
-  Average alignment score against the probabilistic model for this motif.  Closer to 0 is better.
+  A score indicating how close a sequence is to the cutoff barrier.  100 is the best, 0 is right on the cutoff line, negative is outside of the cutoff region.
   </div>
 
   <div class="help-text" hidden data-header-name="full-edit">
@@ -125,7 +125,7 @@
   </div>
 
   <div class="help-text" hidden data-header-name="signature">
-  A text summary of the interactions characteristic of this motif.
+  A 2D diagram of the consensus interactions in the motif group.
   </div>
 </div>
 {% endblock page_content%}
