--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -3,7 +3,7 @@
 {% block title %}JAR3D Results{% endblock %}
 
 {% block page_subtitle %}
-
+query_info.title
 <!-- AddThis Button BEGIN -->
 <span class="addthis_toolbox addthis_default_style pull-right">
 <a href="http://www.addthis.com/bookmark.php?v=250&amp;pubid=ra-4fb19f2d543502ad" class="addthis_button_compact">Share</a>
