--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -16,7 +16,7 @@
 {% block page_content %}
 
 <div class='row' id='query-interpretation'>
-  <div class="span12">
+  <h2><div class="span12"></h2>
   {{query_info.title}}
     <h3>Input Summary</h3>
   </div>
