--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -16,8 +16,8 @@
 {% block page_content %}
 
 <div class='row' id='query-interpretation'>
-  <h2><div class="span12"></h2>
-  {{query_info.title}}
+  <div class="span12">
+  <h2>{{query_info.title}}</h2>
     <h3>Input Summary</h3>
   </div>
 
