add title to pending pages

--- a/Templates/JAR3Doutput/base_result_loop_pending.html
+++ b/Templates/JAR3Doutput/base_result_loop_pending.html
@@ -6,7 +6,7 @@
 {% endblock page_subtitle %}
 
 {% block page_content %}
-
+<h2>{{query_info.title}}</h2>
   <div class="span6">
   Your query has been successfully added to the queue.
   The page will refresh every 5 seconds until results for the first loops become available.
