Fix inadvertent error in previous change

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -16,7 +16,7 @@ predicting RNA 3D motifs in sequences
             placeholder="Optional title for search">{{title-input|default:''}}</textarea>
             <br>
             <textarea id='input' class="span8" rows='10' tabindex="1"
-            placeholder="Single or aligned RNA/DNA sequences or single/multiple loops (fasta-formatted descriptions and secondary structures are optional)"></textarea>
+            placeholder="Single or aligned RNA/DNA sequences or single/multiple loops (fasta-formatted descriptions and secondary structures are optional)">{{input|default:''}}</textarea>
         </div>
         <div class="span4">
             <h4>Sample Input</h4>
