--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -36,7 +36,7 @@ predicting RNA 3D motifs in sequences
         <button class="btn btn-large btn-primary span2" id="submit" tabindex="2">Submit</button>
         <button class="btn btn-danger span1" id="clear">Clear</button>
         <p> Motif Atlas Version : 
-        <select name = "version">
+        <select id = "version">
         {% for option in options %}
           <option value={{option}}>{{option}}</option>
         }
