add motif version to results pages

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -11,6 +11,7 @@
 {% block page_subtitle %}
   {{ block.super }}
   Query {{ query_info.query_id }} completed
+  Run on Motif Atlas Version {{ query_info.group_set }}
 {% endblock page_subtitle %}
 
 
