--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -13,7 +13,8 @@
   Query <a href="http://rna.bgsu.edu/jar3d_dev/result/{{ query_info.query_id }}" target="_blank"> {{ query_info.query_id }}</a>  
   <br>
   Alignment of Loop {{loopnum}} to 
-  <a href="http://rna.bgsu.edu/rna3dhub/motif/view/{{ motifid }}" target="_blank"> {{motifid}} </a> <br>
+  <a href="http://rna.bgsu.edu/rna3dhub/motif/view/{{ motifid }}" target="_blank"> {{motifid}} </a>
+  <br>
   Run on Motif Atlas Version {{ query_info.group_set }}
 {% endblock page_subtitle %}
 
