Fix hyperlink typo

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -5,7 +5,7 @@
 {% block page_specific_css_class %}homepage{% endblock page_specific_css_class %}
 
 {% block page_subtitle %}
-scoring RNA loop sequences against known 3D motifs
+Scoring RNA loop sequences against known 3D motifs
 <a href="{{ BASE }}/main/jar3d-tutorial/" class="btn btn-success pull-right">Tutorial</a>
 {% endblock page_subtitle %}
 
