--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -12,7 +12,7 @@
   {{ block.super }}
   Query {{ query_info.query_id }} completed
   <br>
-  Run on Motif Atlas Version {{ query_info.group_set }}
+  Ran on Motif Atlas Version {{ query_info.group_set }}
 {% endblock page_subtitle %}
 
 {% block page_content %}
