fix version display

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,7 +15,7 @@
   Alignment of Loop {{loopnum}} to 
   <a href="http://rna.bgsu.edu/rna3dhub/motif/view/{{ motifid }}" target="_blank"> {{motifid}} </a>
   <br>
-  Run on Motif Atlas Version {{ version }}
+  Run on Motif Atlas Version {{ query_info.group_set }}
 {% endblock page_subtitle %}
 
 
