fix version display

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -12,7 +12,11 @@
   {{ block.super }}
   Query {{ query_info.query_id }} completed
   <br>
-  Run on Motif Atlas Version {{ query_info.version }}
+  {% if query_info.group_set|length == 13%}
+  Run on Motif Atlas Version {{ query_info.group_set|slice:2:5 }}
+  {% else %}
+  Run on Motif Atlas Version {{ query_info.group_set|slice:2:4 }}
+  {% endif %}
 {% endblock page_subtitle %}
 
 {% block page_content %}
