--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,7 +15,11 @@
   Alignment of Loop {{loopnum}} to 
   <a href="http://rna.bgsu.edu/rna3dhub/motif/view/{{ motifid }}" target="_blank"> {{motifid}} </a>
   <br>
-  Run on Motif Atlas Version {{ query_info.version }}
+  {% if query_info.group_set|length == 13%}
+  Run on Motif Atlas Version {{ query_info.group_set|slice:2:5 }}
+  {% else %}
+  Run on Motif Atlas Version {{ query_info.group_set|slice:2:4 }}
+  {% endif %}
 {% endblock page_subtitle %}
 
 
