fix jsmol position, sorting

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -30,13 +30,14 @@
       </button>
     </div>
 
+{% comment %}
     <dl class='span3'>
         <dt>Number of sequences</dt>
         <dd>{{num.seq}}</dd>
         <dt>Total number of loop instances</dt>
         <dd>{{num.loop_instances}}</dd>
     </dl>
-
+{% endcomment %}
 </div>
 
 
