--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -158,8 +158,9 @@
           // position jmol
           (function(){
               var reference = $('.loop-result-container').first();
+              var reference2 = $('.pre-scrollabale search-summary').first()
               var offset_left = reference.offset().left + reference.width();
-              var offset_top  = reference.offset().top;
+              var offset_top  = reference2.offset().top;
               $('#jmol').css('position','fixed')
                         .css('left',offset_left)
                         .css('top',offset_top);
