add links and test

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -56,7 +56,7 @@ Scoring RNA loop sequences against known 3D motifs
               from the <a href="{{BASE}}/rna3dhub/motifs">RNA 3D Motif Atlas</a>, by exact sequence match for sequences already observed in 3D and
               by probabilistic scoring and edit distance for novel sequences.
               RNA hairpin and internal loops are often represented on secondary structure diagrams as if they are unstructured,
-              but in fact most are structured by non-Watson-Crick basepairs, base stacking, and base-backbone interactions.
+              but in fact most are structured by <a h-ref:"http://ndbserver.rutgers.edu/ndbmodule/services/BPCatalog/bpCatalog.html">non-Watson-Crick basepairs</a>, base stacking, and base-backbone interactions.
               Analysis of 3D structures shows that
               different RNA sequences can form the same RNA 3D motif, as is apparent
               in many motif groups in the RNA 3D Motif Atlas.
@@ -116,8 +116,9 @@ Scoring RNA loop sequences against known 3D motifs
               <li>For each motif group, we form an acceptance region that is consistent with the 
               geometry and basepairing of that group. If the score is in the cutoff region, we 
               infer that the new sequence can form the same 3D structure.
+              <li>For more infromation you can read:
               <br>
-              <a href="{{ BASE }}/main/webapps/jar3d/">Read more</a>
+              Identifying novel sequence variants of RNA 3D motifs, by Craig L. Zirbel, James Roll, Blake A. Sweeney, Anton I. Petrov, Meg Pirrung, and Neocles Leontis. Nucl. Acids Res. (2015) doi: 10.1093/nar/gkv651 <a href="http://nar.oxfordjournals.org/content/early/2015/06/29/nar.gkv651.full">link</a>
               </ol>
         </div>
     </div>
