Update to current year
We should always display the current year in the jar3d site. This should fix
that issue.

--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -43,7 +43,7 @@
         </div>
 
         <footer>
-            {% block footer %}<p>&copy;&nbsp;BGSU, 2012</p>{% endblock footer %}
+          {% block footer %}<p>&copy;&nbsp;BGSU, {% now "Y" %}</p>{% endblock footer %}
         </footer>
 
     </div> <!-- /container -->
