Change align link to a button
Anton suggested this as it would make the link clearer. This adds a class to
style the link as button. It may be too large so this will need some testing I
think.

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -56,7 +56,7 @@
 
           <br>{{result.signature}}<br>
 
-        <a href="{{result.align_url}}{{result.motif_id}}" target="_blank">Align sequences to {{ result.motif_id }}</a>
+        <a class='btn btn-primary' href="{{result.align_url}}{{result.motif_id}}" target="_blank">Align sequences to {{ result.motif_id }}</a>
         </td>
         <td>{{ result.cutoff_percent|floatformat:2 }}</td>
         <td>{{ result.mean_cutoff_score|floatformat:2 }}</td>
