--- a/Templates/JAR3Doutput/base_result_loop_pending.html
+++ b/Templates/JAR3Doutput/base_result_loop_pending.html
@@ -15,7 +15,7 @@
 
       <dl class='span3'>
         <dt>Loop Number</dt>
-        <dd>{{loopnum}}</dd>
+        <dd>{{loopnum|add:"1"}}</dd>
         <dt>Motif ID</dt>
         <dd>{{motifid}}</dd>
     </dl>
