fix jsmol location

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -158,7 +158,7 @@
           // position jmol
           (function(){
               var reference = $('.loop-result-container').first();
-              var reference2 = $('.pre-scrollabale-search-summary').first()
+              var reference2 = $('.pre-scrollabale loop-summary').first()
               var offset_left = reference.offset().left + reference.width();
               var offset_top  = reference2.offset().top;
               $('#jmol').css('position','fixed')
