Change alingment page title

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -1,6 +1,8 @@
 {% extends "JAR3Doutput/base_result.html" %}
 {% load staticfiles %}
 
+{% block title %}JAR3D Alignment{% endblock %}
+
 {% block page_specific_css_class %}results-done{% endblock page_specific_css_class %}
 
 {% block custom_css %}
