temporarily remove loop nums from alignements

--- a/Templates/JAR3Doutput/base_result_loop_pending.html
+++ b/Templates/JAR3Doutput/base_result_loop_pending.html
@@ -14,8 +14,10 @@
   The results will be kept on the server indefinitely at this URL.
 
       <dl class='span3'>
+      {% comment %}
         <dt>Loop Number</dt>
         <dd>{{loopnum|add:"1"}}</dd>
+      {% endcomment %}
         <dt>Motif ID</dt>
         <dd>{{motifid}}</dd>
     </dl>
