--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -14,7 +14,7 @@
   {{ block.super }}
   Query <a href="http://rna.bgsu.edu/jar3d/result/{{ query_info.query_id }}" target="_blank"> {{ query_info.query_id }}</a>  
   <br>
-  Alignment of Loop {{loopnum|add:"1"}} to 
+  Alignment to 
   <a href="http://rna.bgsu.edu/rna3dhub/motif/view/{{ motifid }}" target="_blank"> {{motifid}} </a>
   <br>
   {% if query_info.group_set|length == 13%}
