Update menu for #12
The menu included links to broken about-us pages. These have been
updated to new urls.

--- a/Templates/JAR3Doutput/sitewide_menu.html
+++ b/Templates/JAR3Doutput/sitewide_menu.html
@@ -41,10 +41,10 @@
 	<li id="menu-item-120" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-120"><a href="{{BASE}}/main/databases/triples/" >RNA Base Triple Database</a></li>
 </ul>
 </li>
-<li id="menu-item-121" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-121"><a href="{{BASE}}/main/about-us/"  class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
+<li id="menu-item-121" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-121"><a href="http://www.bgsu.edu/research/rna/"  class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
 <ul class="dropdown-menu">
-	<li id="menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="{{BASE}}/main/about-us/people/" >People</a></li>
-	<li id="menu-item-95" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-95"><a href="{{BASE}}/main/about-us/publications/" >Publications</a></li>
+	<li id="menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="http://www.bgsu.edu/research/rna/people.html" >People</a></li>
+	<li id="menu-item-95" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-95"><a href="http://www.bgsu.edu/research/rna/publications.html" >Publications</a></li>
 </ul>
 </li>
 <li id="menu-item-241" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-241"><a href="{{BASE}}/main/news-2/" >News</a></li>
