Shorter column title
Motif ID and Additional Information -> Matching motif

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -36,7 +36,7 @@
       <thead>
         <tr>
           <th class='table-header' data-header-name='index'>#</th>
-          <th class='table-header' data-header-name='motif' style='min-width:200px'>Motif ID and Additional Information</th>
+          <th class='table-header' data-header-name='motif' style='min-width:200px'>Matching motif</th>
           <th class='table-header' data-header-name='percent'>Acceptance Rate</th>
           <th class='table-header' data-header-name='mean-score'>Mean Cutoff Score</th>
           <th class='table-header' data-header-name='full-edit'>Full Edit Distance</th>
