Link directly to the tutorial without relying on server redirects

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -6,7 +6,7 @@
 
 {% block page_subtitle %}
 Scoring RNA loop sequences against known 3D motifs
-<a href="{{ BASE }}/main/jar3d-tutorial/" class="btn btn-success pull-right">Tutorial</a>
+<a href="http://www.bgsu.edu/research/rna/help/tutorials.html" class="btn btn-success pull-right">Tutorial</a>
 {% endblock page_subtitle %}
 
 {% block page_content %}
